--- a/template/css/style.css
+++ b/template/css/style.css
@@ -4,9 +4,13 @@
     box-sizing: border-box;
 }
 
+.wrapper {
+    overflow: hidden;
+}
+
 body {
     overflow: hidden;
-    font-size: 25px;
+    font-size: 1rem;
 }
 
 /* Panel style */
@@ -18,7 +22,7 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 200px;
+    padding: 10%;
 }
 
 /* Headers */
@@ -26,21 +30,21 @@ h1, h2, h3 {
     font-family: malaga-narrow, serif;
     font-weight: 800;
     font-style: normal;
-    margin: 30px;
-    font-size: 63px;
+    font-size: 3rem;
 }
 
 h2 {
-    font-size: 50px;
+    font-size: 2rem;
 }
 
 h3 {
-    font-size: 27px;
+    font-size: 1.3rem;
+    margin-top: 5%;
 }
 
 /* Paragraph */
 p {
-    margin: 20px;
+    margin: 6%;
     line-height: 25px;
     font-family: mrs-eaves, serif;
     font-weight: 700;
@@ -52,8 +56,8 @@ p {
 .btn {
     color: var(--pri-bg);
     background-color: var(--pri-tx);
-    padding: 7px 14px;
-    margin: 25px;
+    padding: 2% 4%;
+    margin: 8%;
     border-radius: 40px;
     text-decoration: none;
     font-family: malaga-narrow, serif;
@@ -72,7 +76,7 @@ em {
     font-family: mrs-eaves, serif;
     font-weight: 400;
     font-style: italic;
-    font-size: 27px;
+    font-size: 1.2rem;
 }
 
 /* Panel Colours */
@@ -99,8 +103,8 @@ em {
 /* Images */
 
 img {
-    width: 200px;
-    height: 200px;
+    width: 40%;
+    height: 40%;
     margin-top: 20px;
 }
 
@@ -192,3 +196,36 @@ img {
 }
 
 
+@media (min-width: 768px) {
+    p {
+        font-size: 1.25rem;
+    }
+
+    img {
+        width: 20%;
+        margin-top: 20px;
+    }
+
+    h2 {
+        font-size: 3.2rem;;
+    }
+}
+
+@media (min-width: 992px) {
+
+    body {
+        height: 100vh;
+    }
+    .story-panel {
+        padding: 18%;
+    }
+
+    img {
+        width: 25%;
+        margin-top: 20px;
+    }
+
+    h2 {
+        font-size: 3.6rem;;
+    }
+}
