--- a/template/css/style.css
+++ b/template/css/style.css
@@ -45,7 +45,6 @@ h3 {
 /* Paragraph */
 p {
     margin: 6%;
-    line-height: 25px;
     font-family: mrs-eaves, serif;
     font-weight: 700;
     font-style: normal;
@@ -120,13 +119,13 @@ img {
 
 .KitchenDoor{
     position: relative;
-    right: 106px;
+    right: 52px;
 }
 
 .KitchenFreedom {
     animation: bright 4s infinite;
     position: relative;
-    left: 100px;
+    left: 55px;
 }
 
 .MouthOpen {
@@ -198,7 +197,7 @@ img {
 
 @media (min-width: 768px) {
     p {
-        font-size: 1.25rem;
+        font-size: 1.3rem;
     }
 
     img {
@@ -209,6 +208,36 @@ img {
     h2 {
         font-size: 3.2rem;;
     }
+
+    h3 {
+        font-size: 2rem;
+        margin-top: 1%;
+    }
+
+    em {
+        font-size: 1.3rem;
+    }
+
+    p {
+        margin: 2%;
+        line-height: 25px;
+        font-family: mrs-eaves, serif;
+        font-weight: 700;
+        font-style: normal;
+        line-height: 139.1%;
+    }
+
+    .btn {
+        padding: 1% 3%;
+        margin: 2%;
+    }
+
+    .KitchenDoor{
+        position: relative;
+        right: 60.5px;
+    }
+
+    
 }
 
 @media (min-width: 992px) {
@@ -221,11 +250,12 @@ img {
     }
 
     img {
-        width: 25%;
-        margin-top: 20px;
+        width: 15%;
+        margin-top: 1%;
     }
-
-    h2 {
-        font-size: 3.6rem;;
+    
+    .KitchenDoor{
+        position: relative;
+        right: 99.9px;
     }
 }
